Fix test surefire dependency issue
Fix test surefire dependency issue