@@ -71,7 +71,47 @@
 					</execution>
 				</executions>
 			</plugin>
-			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>3.6.1</version>
+				<executions>
+					<execution>
+						<id>copy-dependencies</id>
+						<phase>process-test-resources</phase>
+						<goals>
+							<goal>copy-dependencies</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${project.build.directory}/dependency</outputDirectory>
+							<includeArtifactIds>slf4j-api,slf4j-simple,mule-module-jpms-utils</includeArtifactIds>
+							<stripVersion>true</stripVersion>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.2.5</version>
+				<configuration>
+					<!-- Explicitly set the module path to include copied dependencies -->
+					<argLine>
+						--module-path ${project.build.directory}/dependency/slf4j-api.jar:${project.build.directory}/dependency/slf4j-simple.jar:${project.build.directory}/dependency/mule-module-jpms-utils.jar
+						--add-modules org.slf4j,org.mule.runtime.jpms.utils
+						--add-opens java.base/java.lang=org.mule.runtime.jpms.utils
+						--add-opens java.base/java.lang.reflect=org.mule.runtime.jpms.utils
+						--add-opens java.base/java.lang.invoke=org.mule.runtime.jpms.utils
+						--add-opens java.sql/java.sql=org.mule.runtime.jpms.utils
+					</argLine>
+					<!-- Ensure dependencies are scanned for tests -->
+					<dependenciesToScan>
+						<dependency>org.slf4j:slf4j-api</dependency>
+						<dependency>org.slf4j:slf4j-simple</dependency>
+						<dependency>org.mule.runtime.boot:mule-module-jpms-utils</dependency>
+					</dependenciesToScan>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -109,6 +149,12 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>${slf4jApi.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>${slf4jApi.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
